# medical-rag

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: serve_llm.sh  stop_llm.sh
src/medical_rag/: __main__.py  config.py  embed.py  load_data.py  query.py
