[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-rag"
version = "0.1.0"
description = "Retrieval-augmented generation pipeline over PubMedQA"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.112.0",
    "chromadb>=1.5.9",
    "python-dotenv>=1.0",
    "sentence-transformers>=5.6.0",
]

[project.scripts]
medical-rag = "medical_rag.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
